<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="198dp"
        android:foreground="@drawable/b_ho"
        tools:srcCompat="@drawable/b_ho" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poli Chat"
        android:textColor="#009688"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Iniciar sesión"
        android:textColor="#fff" />

    <Button
        android:id="@+id/register"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Registrarse"
        android:textColor="#fff" />

</LinearLayout>