...
                android:textColor="#fff"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:tabIndicatorColor="#fff"
            app:tabSelectedTextColor="#fff"
            app:tabTextColor="#fff" />
...
