<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_error">Authentication failed!</string>
</resources>